--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /integration/bazel/bazel-*
 *.log
 node_modules
-/coverage/
+/coverage/*
 
 # CircleCI temporary file for cache key computation.
 # See `save_month_to_file` in `.circleci/config.yml`.
